Added Hack to deal with loading schema’s using the Spring Boot JarUrlConnection